# enemy-controller

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  panels.py  security.py
app/services/: __init__.py  infra.py  lck_pics.py  reflexion_rondo.py
app/web/: routes.py
docs/: architecture.md  changelog.md  decisions.md  runbook.md  setup.md  spec.md
templates/: base.html  index.html
templates/partials/: grid.html  panel_health.html  panel_metrics.html  panel_queue.html  panel_queue_control.html  panel_scores.html  panel_submissions.html
tests/: test_security.py
